force-app/main/default/objects/Student__c/fields/Details_verified__c.field-meta.xml
<CustomField>
    <fullName>Details_verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Details verified?</label>
    <type>Checkbox</type>
</CustomField>