force-app/main/default/objects/Student__c/fields/Father_s_occupation__c.field-meta.xml
<CustomField>
    <fullName>Father_s_occupation__c</fullName>
    <label>Father’s occupation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>