force-app/main/default/objects/Student__c/fields/Form_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission_Date__c</fullName>
    <label>Form Submission Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>