force-app/main/default/objects/Student__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>III</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>VI</fullName>
            </value>
            <value>
                <fullName>VII</fullName>
            </value>
            <value>
                <fullName>VIII</fullName>
            </value>
            <value>
                <fullName>IX</fullName>
            </value>
            <value>
                <fullName>X--slds-g-color-error-base-50</fullName>
                <color>#641CCF</color>
                <label>X</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>