force-app/main/default/objects/Student__c/fields/Mother_s_occupation__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_occupation__c</fullName>
    <label>Mother&apos;s occupation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>