force-app/main/default/objects/Student__c/fields/Physically_disabled__c.field-meta.xml
<CustomField>
    <fullName>Physically_disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physically disabled?</label>
    <type>Checkbox</type>
</CustomField>