force-app/main/default/objects/Student__c/fields/Student_Description__c.field-meta.xml
<CustomField>
    <fullName>Student_Description__c</fullName>
    <defaultValue>&quot;Hello&quot;</defaultValue>
    <label>Student Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>