force-app/main/default/objects/Student__c/fields/Student_Name2__c.field-meta.xml
<CustomField>
    <fullName>Student_Name2__c</fullName>
    <formula>HYPERLINK(&quot;www.google.com&quot;, &quot;Open&quot; ,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Name2</label>
    <type>Text</type>
</CustomField>