force-app/main/default/objects/Student__c/fields/Toggle__c.field-meta.xml
<CustomField>
    <fullName>Toggle__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked-&gt;Leadership
Unchecked-&gt;Default</inlineHelpText>
    <label>Toggle</label>
    <type>Checkbox</type>
</CustomField>