force-app/main/default/objects/Student__c/validationRules/Valid_Contact_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Contact_Start</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(BEGINS( Text(Contact__c) , &apos;91&apos;))</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Contact should start with 91</errorMessage>
</ValidationRule>