force-app/main/default/objects/Student__c/validationRules/Valid_Submission_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Submission_Date</fullName>
    <active>true</active>
    <errorConditionFormula>DATEVALUE( Form_Submission_Date__c ) &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Form_Submission_Date__c</errorDisplayField>
    <errorMessage>A user should not be able to enter a future date. He should only enter past dates.</errorMessage>
</ValidationRule>