force-app/main/default/objects/Student__c/listViews/NewStudView.listView-meta.xml
<ListView>
    <fullName>NewStudView</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <filterScope>Mine</filterScope>
    <label>NewStudView</label>
</ListView>